# job-decision-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  profile.example.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: greeting-generator.md  job-analyzer.md
api/: __init__.py  app.py  auth.py  config.py  guardrails.py  metrics.py  ratelimit.py  schemas.py
api/static/: index.html
calibrate/: correlate.py  load_feedback.py  reviewer.md
closedloop/: backfill_outcomes.py  loop_metric.py
commands/: job-analyze.md  job-filter.md
core/: __init__.py  analyze.py  llm.py  pricing.py  prompts.py  rules.py  schemas.py  trace.py
docs/: architecture.md  candidate-profile.md  data-schema.md  how-it-works.md
eval/: annotate_gold_direction.py  build_golden.py  golden.example.jsonl  judge.py  judge_prompt.md  run_eval.py
examples/: candidates.sample.json  jd-sample.md  output-sample.md  run_engine.py
tests/: test_api.py  test_guardrails.py  test_phase3.py  test_pricing.py  test_rules.py  test_trace.py
