[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-decision-engine"
version = "0.1.0"
description = "JD 决策引擎:看穿岗位本质 + 判断投递价值 + 生成话术,平台无关。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
    "openai>=1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Phase 2 独立服务:FastAPI + uvicorn。httpx 用于 TestClient(测试 api)。
# 库用户(pip install .)不需要这些;服务部署才装:pip install ".[api]"
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["core"]
